--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -30,7 +30,7 @@
     font-style: normal;
   }
 
-  .poppins-regular {
+  .poppins {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
