--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,7 +1,9 @@
-<h1 class="text-[32px] text-center mt-[35px]">
+<h1
+  class="text-[32px] text-center mt-[35px] knewave md:text-[50px] md:mt-[50px]"
+>
   Er du klar på dit livs eventyr?
 </h1>
-<p class="poppins m-14 mt-[20px]">
+<p class="poppins m-14 mt-[25px] md:text-[18px] md:px-80">
   HÖJSKOLENDK er en dansk højskole for unge (18-30 år), der elsker fællesskab,
   eventyr og mødet med nye kulturer. Vi tilbyder unikke højskoleophold i
   udlandet, hvor du rejser med rygsæk, oplever stærkt sammenhold og får
