--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,8 +15,10 @@ import herovideo from "../assets/images/herovideo.mp4";
   <div
     class="relative z-10 flex items-center justify-center h-full text-white flex-col"
   >
-    <h1 class="text-4xl font-bold knewave">HØJSKOLE I UDLANDET</h1>
-    <h2 class="mt-4 m-12 text-xl poppins-bold text-[20px]">
+    <h1 class="text-[64px] knewave text-center md:text-[96px]">
+      HØJSKOLE I UDLANDET
+    </h1>
+    <h2 class="mt-4 m-12 poppins-bold text-[20px] text-center md:text-[32px]">
       Eventyrlige højskoleophold i udlandet for unge
     </h2>
 
