--- a/src/components/Tekst.astro
+++ b/src/components/Tekst.astro
@@ -6,58 +6,89 @@ import tekst2 from "../assets/images/tekst2.jpeg";
 import tekst3 from "../assets/images/tekst3.jpg";
 ---
 
-<div class="flex justify-center mt-10">
-  <Image
-    src={tekst1}
-    alt="En gruppe unge mennesker tager et selfie"
-    class="rounded-[30px] w-[450px] h-[450px] object-cover"
-  />
-</div>
-<h1 class="text-[32px] text-center mt-[35px]">
-  Højskole i udlandet for unge mennesker
-</h1>
-<p class="poppins m-14 mt-[20px]">
-  Drømmer du om højskole i udlandet? Med HÖJSKOLENDK får du uforglemmelige
-  eventyr med fællesskab, unikke oplevelser og meningsfuld læring. Du skaber nye
-  venskaber og minder for livet – noget, du aldrig vil fortryde. Vælg blandt
-  fantastiske destinationer: oplev smuk natur på Bali eller Hawaii,
-  storbyeventyr i New York eller Tokyo, eller autentiske kulturer i Mexico og
-  Indien. Er du til adventure? Prøv adrenalinpumpende aktiviteter i New Zealand,
-  Nepal eller Costa Rica.
-</p>
+<div class="w-full p-9">
+  <div class="flex flex-col md:flex-row items-center md:justify-center mt-10">
+    <!-- Billede (venstre på desktop, centreret på mobil) -->
+    <div class="flex justify-center md:w-1/3 md:mr-4">
+      <Image
+        src={tekst1}
+        alt="En gruppe unge mennesker tager et selfie"
+        class="rounded-[30px] w-[450px] h-[450px] object-cover md:ml-32"
+      />
+    </div>
 
-<div class="flex justify-center mt-10">
-  <Image
-    src={tekst2}
-    alt="En gruppe unger mennesker får vand i hovedet"
-    class="rounded-[30px] w-[450px] h-[450px] object-cover"
-  />
+    <!-- Tekst (h1 og p til højre på desktop) -->
+    <div class="md:w-2/3 md:text-left md:pl-6 md:pr-6 mt-10 md:mt-0">
+      <h1 class="text-[32px] pl-14 pr-14 knewave">
+        Højskole i udlandet for unge mennesker
+      </h1>
+      <p class="poppins m-14 mt-[20px]">
+        Drømmer du om højskole i udlandet? Med HÖJSKOLENDK får du uforglemmelige
+        eventyr med fællesskab, unikke oplevelser og meningsfuld læring. Du
+        skaber nye venskaber og minder for livet – noget, du aldrig vil
+        fortryde. Vælg blandt fantastiske destinationer: oplev smuk natur på
+        Bali eller Hawaii, storbyeventyr i New York eller Tokyo, eller
+        autentiske kulturer i Mexico og Indien. Er du til adventure? Prøv
+        adrenalinpumpende aktiviteter i New Zealand, Nepal eller Costa Rica.
+      </p>
+    </div>
+  </div>
 </div>
-<h1 class="text-[32px] text-center mt-[35px]">
-  Uforglemmeligt højskoleophold i udlandet
-</h1>
-<p class="poppins m-14 mt-[20px]">
-  HÖJSKOLENDK tilbyder højskoleophold i udlandet året rundt og i sommerferien.
-  Vælg mellem ophold på 5 uger om sommeren eller længere rejser på 2-3 måneder i
-  løbet af året – begge muligheder er populære blandt vores elever.
-  Sommeropholdene kombinerer flere lande og kulturer og er perfekt til dig, der
-  vil rejse, møde nye venner og udvikle dig i sommerferien, inden du fx starter
-  på studie eller job. De længere ophold er oplagte for dig, der holder sabbatår
-  og drømmer om at opleve verden og styrke dig selv personligt.
-</p>
-<div class="flex justify-center mt-10">
-  <Image
-    src={tekst3}
-    alt="En grupep unge mennesker stikker hovedet ud af en bus "
-    class="rounded-[30px] w-[450px] h-[450px] object-cover"
-  />
+
+<div class="w-full p-9">
+  <div
+    class="flex flex-col-reverse md:flex-row items-center md:justify-center mt-10"
+  >
+    <!-- Tekst (venstre på desktop, centreret på mobil) -->
+    <div class="md:w-2/3 md:text-left md:pl-14 md:pr-14 mt-10 md:mt-0 md:mx-10">
+      <h1 class="text-[32px] pl-14 pr-14 knewave">
+        Uforglemmeligt højskoleophold i udlandet
+      </h1>
+      <p class="poppins m-14 mt-[20px]">
+        HÖJSKOLENDK tilbyder højskoleophold i udlandet året rundt og i
+        sommerferien. Vælg mellem ophold på 5 uger om sommeren eller længere
+        rejser på 2-3 måneder i løbet af året – begge muligheder er populære
+        blandt vores elever. Sommeropholdene kombinerer flere lande og kulturer
+        og er perfekt til dig, der vil rejse, møde nye venner og udvikle dig i
+        sommerferien, inden du fx starter på studie eller job. De længere ophold
+        er oplagte for dig, der holder sabbatår og drømmer om at opleve verden
+        og styrke dig selv personligt.
+      </p>
+    </div>
+
+    <!-- Billede (højre på desktop, centreret på mobil) -->
+    <div class="flex justify-center md:w-1/3 md:mx-10">
+      <Image
+        src={tekst2}
+        alt="En gruppe unge mennesker får vand i hovedet"
+        class="rounded-[30px] w-[450px] h-[450px] object-cover"
+      />
+    </div>
+  </div>
 </div>
-<h1 class="text-[32px] text-center mt-[35px]">
-  En rejse højskole fyldt med oplevelser
-</h1>
-<p class="poppins m-14 mt-[20px]">
-  Vil du gerne på højskole i udlandet, tilbyder vi de mest attraktive
-  højskoleophold i udlandet, hvor du besøger flere skønne og spændende lande og
-  deltage i spændende og inspirerende undervisning og alverdens fede
-  aktiviteter.
-</p>
+
+<div class="w-full p-9">
+  <div class="flex flex-col md:flex-row items-center md:justify-center mt-10">
+    <!-- Billede (venstre på desktop) -->
+    <div class="flex justify-center md:w-1/3 md:mx-10">
+      <Image
+        src={tekst3}
+        alt="En gruppe unge mennesker stikker hovedet ud af en bus"
+        class="rounded-[30px] w-[450px] h-[450px] object-cover"
+      />
+    </div>
+
+    <!-- Tekst (højre på desktop) -->
+    <div class="md:text-left md:w-2/3 md:pl-14 md:pr-14 mt-10 md:mt-0 md:mx-10">
+      <h1 class="text-[32px] pl-14 pr-14 knewave">
+        En rejse højskole fyldt med oplevelser
+      </h1>
+      <p class="poppins m-14 mt-[20px]">
+        Vil du gerne på højskole i udlandet, tilbyder vi de mest attraktive
+        højskoleophold i udlandet, hvor du besøger flere skønne og spændende
+        lande og deltager i spændende og inspirerende undervisning og alverdens
+        fede aktiviteter.
+      </p>
+    </div>
+  </div>
+</div>
