--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -3,7 +3,7 @@
 >
   Er du klar på dit livs eventyr?
 </h1>
-<p class="poppins m-14 mt-[25px] md:text-[18px] md:px-80">
+<p class="poppins m-14 mt-[25px] mb-[50px] md:text-[18px] md:px-80">
   HÖJSKOLENDK er en dansk højskole for unge (18-30 år), der elsker fællesskab,
   eventyr og mødet med nye kulturer. Vi tilbyder unikke højskoleophold i
   udlandet, hvor du rejser med rygsæk, oplever stærkt sammenhold og får
