--- a/src/components/Tekst.astro
+++ b/src/components/Tekst.astro
@@ -6,7 +6,7 @@ import tekst3 from "../assets/images/tekst3.jpg";
 ---
 
 <div class="flex flex-col md:flex-row items-center md:justify-center mt-10">
-  <div class="flex justify-center w-full md:w-1/2">
+  <div class="flex justify-center w-full md:w-1/2 md:mt-32">
     <Image
       src={tekst1}
       alt="En gruppe unge mennesker tager et selfie"
@@ -51,7 +51,7 @@ import tekst3 from "../assets/images/tekst3.jpg";
     </p>
   </div>
 
-  <div class="flex justify-center w-full md:w-1/2">
+  <div class="flex justify-center w-full md:w-1/2 md:mt-32">
     <Image
       src={tekst2}
       alt="En gruppe unge mennesker får vand i hovedet"
@@ -61,7 +61,7 @@ import tekst3 from "../assets/images/tekst3.jpg";
 </div>
 
 <div class="flex flex-col md:flex-row items-center md:justify-center mt-10">
-  <div class="flex justify-center w-full md:w-1/2">
+  <div class="flex justify-center w-full md:w-1/2 md:mt-32">
     <Image
       src={tekst3}
       alt="En gruppe unge mennesker stikker hovedet ud af en bus"
