--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,9 @@ import { Image } from "astro:assets";
       <a href="#" class="hover:text-[#FF5A01] poppins text-white"
         >Sommerhøjskole</a
       >
-      <a href="#" class="hover:text-[#FF5A01] poppins text-white">Priser</a>
+      <a href="/priser" class="hover:text-[#FF5A01] poppins text-white"
+        >Priser</a
+      >
       <a href="#" class="hover:text-[#FF5A01] poppins text-white">Tilmeld</a>
       <a href="#" class="hover:text-[#FF5A01] poppins text-white">Infomøder</a>
       <a href="#" class="hover:text-[#FF5A01] poppins text-white">Om os</a>
