--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,12 +13,22 @@
         <h2 class="font-bold text-xl mb-2">KONTAKT</h2>
         <p>Telefon: +45 70 27 90 07</p>
         <p>Mandag til Fredag 10:00 - 16:00</p>
-        <p>Mail: <a href="mailto:info@hojskolendk.dk" class="text-blue-500">info@hojskolendk.dk</a></p>
+        <p>
+          Mail: <a href="mailto:info@hojskolendk.dk" class="text-blue-500">info@hojskolendk.dk</a>
+        </p>
         <div class="flex space-x-4 mt-4">
-          <a href="/src/assets/images/Facebook.png" class="text-black"><i class="fab fa-facebook-f"></i></a>
-          <a href="/src/assets/images/instagram.png" class="text-black"><i class="fab fa-instagram"></i></a>
-          <a href="/src/assets/images/YouTube.png" class="text-black"><i class="fab fa-youtube"></i></a>
-          <a href="/src/assets/images/LinkedIn.png" class="text-black"><i class="fab fa-linkedin-in"></i></a>
+          <a href="/src/assets/images/Facebook.png" class="text-black">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="/src/assets/images/instagram.png" class="text-black">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="/src/assets/images/YouTube.png" class="text-black">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="/src/assets/images/LinkedIn.png" class="text-black">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
         </div>
       </div>
   
@@ -26,10 +36,10 @@
       <div class="w-full md:w-1/3">
         <h2 class="font-bold text-xl mb-4">SAMARBEJDSPARTNERE</h2>
         <div class="grid grid-cols-2 gap-4">
-          <img src="/src/assets/images/jysk.png" alt="Rejsegaranti Fonden" class="max-h-12">
-          <img src="/src/assets/images/rejse.png" alt="Jysk Rejsebureau" class="max-h-12">
-          <img src="/src/assets/images/gouda.png" alt="Gouda" class="max-h-12">
-          <img src="/src/assets/images/co2.png" alt="CO2 Neutral" class="max-h-12">
+          <img src="/src/assets/images/jysk.png" alt="Rejsegaranti Fonden" class="max-h-12" />
+          <img src="/src/assets/images/rejse.png" alt="Jysk Rejsebureau" class="max-h-12" />
+          <img src="/src/assets/images/gouda.png" alt="Gouda" class="max-h-12" />
+          <img src="/src/assets/images/co2.png" alt="CO2 Neutral" class="max-h-12" />
         </div>
       </div>
     </div>
