--- a/src/components/hvorforvaelgeos.astro
+++ b/src/components/hvorforvaelgeos.astro
@@ -1,7 +1,7 @@
     <section class="bg-gradient-to-r from-[#fce8cf] to-[#f8ad66] py-16">
     <div class="container mx-auto text-center">
       <!-- Overskrift -->
-      <h2 class="text-3xl font-bold mb-12">Hvorfor vælge os?</h2>
+      <h2 class="text-3xl font-knenave mb-12">Hvorfor vælge os?</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
         <!-- Teambuilding -->
         <div class="text-center">
