--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,9 @@ import Hero from "../components/Hero.astro";
 import Intro from "../components/Intro.astro";
 import Rejser from "../components/Rejser.astro";
 import Tekst from "../components/Tekst.astro";
+import Hvorforvaelgeos from "../components/hvorforvaelgeos.astro";
+import Qoutes from "../components/qoutes.astro";
+import Highlights from "../components/highlights.astro";
 ---
 
 <MainLayout title="Højskole i udlandet" />
@@ -14,3 +17,6 @@ import Tekst from "../components/Tekst.astro";
 <Intro />
 <Rejser />
 <Tekst />
+<Hvorforvaelgeos/>
+<Qoutes/>
+<Highlights/>
