--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Tekst from "../components/Tekst.astro";
 import Hvorforvaelgeos from "../components/hvorforvaelgeos.astro";
 import Qoutes from "../components/qoutes.astro";
 import Highlights from "../components/highlights.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <MainLayout title="Højskole i udlandet" />
@@ -20,3 +21,4 @@ import Highlights from "../components/highlights.astro";
 <Hvorforvaelgeos/>
 <Qoutes/>
 <Highlights/>
+<Footer/>
