--- a/src/pages/priser.astro
+++ b/src/pages/priser.astro
@@ -3,4 +3,16 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Button from "../components/Button.astro";
 import Link from "../components/Link.astro";
 import { Image } from "astro:assets";
+import Card from "../components/Card.astro";
 ---
+
+<MainLayout />
+<div
+  class="w-full bg-gradient-to-br from-[#FC9330] via-[#FFC895] to-[#FFC895] p-9"
+>
+  <h1>
+    Her får du et klart overblik over vores eventyrlige højskoleophold i
+    udlandet.
+  </h1>
+</div>
+<Card />
