lidt card ændringer

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,5 @@
 ---
-import cardbillede from "../assets/images/cardbillede.jpg";
+import cardbillede from "../assets/images/hawaii.webp";
 import { Image } from "astro:assets";
 ---
 
