--- a/src/components/qoutes.astro
+++ b/src/components/qoutes.astro
@@ -7,7 +7,7 @@
       <!-- Testimonial 1 -->
       <div class="flex flex-col md:flex-row items-center bg-orange-100 p-6 rounded-lg shadow-md">
         <img 
-          src="../assets/images/laura.png" 
+          src="/src/assets/images/laura.png" 
           alt="Laura Ovidia Sofie Pedersen" 
           class="w-24 h-24 md:w-32 md:h-32 rounded-full shadow-md object-cover"
         />
