--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,13 +30,16 @@ import LinkedIn from "../assets/images/LinkedIn.png";
             src={Facebook} alt="Facebook" class="w-8 h-8"/>
           </a>
           <a href="https://instagram.com" target="_blank">
-            <img src="/src/assets/images/instagram.png" alt="Instagram" class="w-8 h-8"/>
+            <Image
+            src={instagram}  alt="Instagram" class="w-8 h-8"/>
           </a>
           <a href="https://youtube.com" target="_blank">
-            <img src="/src/assets/images/YouTube.png" alt="YouTube" class="w-8 h-8"/>
+            <Image
+            src={YouTube}  alt="YouTube" class="w-8 h-8"/>
           </a>
           <a href="https://linkedin.com" target="_blank">
-            <img src="/src/assets/images/LinkedIn.png" alt="LinkedIn" class="w-8 h-8"/>
+            <Image
+            src={LinkedIn} alt="LinkedIn" class="w-8 h-8"/>
           </a>
         </div>
       </div>
