--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,10 @@ import Facebook from "../assets/images/Facebook.png";
 import instagram from "../assets/images/instagram.png";
 import YouTube from "../assets/images/YouTube.png";
 import LinkedIn from "../assets/images/LinkedIn.png";
+import gouda from "../assets/images/gouda.png";
+import jysk from "../assets/images/jysk.png";
+import co2 from "../assets/images/co2.png";
+import rejse from "../assets/images/rejse.png";
 ---
 
 
@@ -45,14 +49,14 @@ import LinkedIn from "../assets/images/LinkedIn.png";
       </div>
   
   
-      <!-- Samarbejdspartnere Section -->
-      <div class="w-full md:w-1/3">
+    <!-- Samarbejdspartnere Section -->
+    <div class="w-full md:w-1/3">
         <h1 class="text-[25px] px10 knewave">Samarbejdspartnere</h1>
         <div class="grid grid-cols-2 gap-4">
-          <img src="/src/assets/images/jysk.png" alt="Rejsegaranti Fonden" class="max-h-12">
-          <img src="/src/assets/images/rejse.png" alt="Jysk Rejsebureau" class="max-h-12">
-          <img src="/src/assets/images/gouda.png" alt="Gouda" class="max-h-12">
-          <img src="/src/assets/images/co2.png" alt="CO2 Neutral" class="max-h-12">
+            <Image src={rejse} alt="Rejsegaranti Fonden" class="w-25 h-20" />
+            <Image src={jysk} alt="Jysk Rejsebureau" class="w-25 h-20" />
+            <Image src={gouda} alt="Gouda" class="w-25 h-20" />
+            <Image src={co2} alt="CO2 Neutral" class="w-25 h-20" />
         </div>
       </div>
     </div>
