--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,7 +3,7 @@ import cardbillede from "../assets/images/hawaii.webp";
 import { Image } from "astro:assets";
 ---
 
-<div class="bg-[#F9F9F9] rounded-lg flex overflow-hidden mx-8 mt-20">
+<div class="bg-[#F9F9F9] rounded-lg flex overflow-hidden mx-8 mt-20 mb-20">
   <Image
     src={cardbillede}
     alt="En gruppe unge tager et selfie i vandet"
