--- a/src/components/highlights.astro
+++ b/src/components/highlights.astro
@@ -1,13 +1,21 @@
+---
+import { Image } from "astro:assets";
+import rejse1 from "../assets/images/rejse1.png";
+import rejse2 from "../assets/images/rejse2.png";
+import rejse3 from "../assets/images/rejse3.png";
+import rejse4 from "../assets/images/rejse4.png";
+---
+
 <div class="bg-gray-50 py-12">
   <div class="text-center mb-8">
     <h2 class="text-3xl font-bold text-gray-800">Highlights</h2>
   </div>
 
-  <div class="grid grid-cols-2 md:grid-cols-4 gap-4 max-w-5xl mx-auto">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4 max-w-3xl mx-auto">
     <!-- Billede 1 -->
     <div class="col-span-2 md:col-span-2">
-      <img 
-        src="src/assets/images/rejse1.png"
+      <Image
+        src={rejse1}
         alt="Garden View" 
         class="rounded-lg shadow-md object-cover w-full h-full"
       />
@@ -15,8 +23,8 @@
     
     <!-- Billede 2 -->
     <div class="col-span-2 md:col-span-1">
-      <img 
-        src="src/assets/images/rejse2.png"
+      <Image
+        src={rejse2}
         alt="Beach View" 
         class="rounded-lg shadow-md object-cover w-full h-full"
       />
@@ -24,8 +32,8 @@
     
     <!-- Billede 3 -->
     <div class="col-span-2 md:col-span-1">
-      <img 
-        src="src/assets/images/rejse3.png"
+      <Image
+        src={rejse3}
         alt="Group at Castle" 
         class="rounded-lg shadow-md object-cover w-full h-full"
       />
@@ -33,11 +41,19 @@
     
     <!-- Billede 4 -->
     <div class="col-span-2 md:col-span-1">
-      <img 
-        src="src/assets/images/rejse4.png"
+      <Image
+        src={rejse4}
         alt="Skydiving" 
-        class="rounded-lg shadow-md object-cover w-full h-full"
-      />
+        class="rounded-lg shadow-md object-cover w-full h-full"/>
+        
     </div>
+        <!-- Billede 4 -->
+        <div class="col-span-2 md:col-span-1">
+          <Image
+            src={rejse4}
+            alt="Skydiving" 
+            class="rounded-lg shadow-md object-cover w-full h-full"/>
+            
+        </div>
   </div>
 </div>
